Feat: 컬럼 수정 (#25)
Mosmember -> image_path -> avatar_path, profile_path
공통 -> created_date, modified_date
issue: D21-364